fix: corect header z-index

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   box-sizing: border-box;
   background-color: #fff;
+  z-index: 2;
 
   &__logo {
     width: 74px;
